Changelog
=========

2.0.0 - unreleased
------------------

- Fixed typo in manage-assignments.pt, it was written
  i18n:attributes="valuel label_disable;"
  instead of i18n:attributes="value label_disable;", so the disable button
  was not properly translated.
  [vincentfretin] 

- Log error rather than fail with exception on MailHostError in mail action.
  [smcmahon]

- Use plone.stringinterp for adaptable string substitution in mail action.
  Plip #9256. [smcmahon]

- Removed SecureMailHost dependency.
  [alecm]

- Adjusted some import statements to use the new zope.container.
  [hannosch]

1.1.7 - unreleased
------------------

- Fixed some duplicated msgids with different defaults.
  There is no new strings to translate.
  See http://dev.plone.org/plone/ticket/9633


1.1.6 - May 16, 2009
--------------------

- Add check to see if getTypeInfo can be None (which is a valid value)
  [tesdal]

- Changed the simplepublish test to use a copy instead of a move action.
  The move action causes the content item to be moved away while editing
  it and causes a NotFound error. In Plone 3 this is hidden by the
  customized NotFound handling.
  [hannosch]

- Fixed GenericSetup tests layer to not pollute the general test
  environment.
  [hannosch]

- Modified a macro call in contentrules-pageform.pt for forwards
  compatibility with Zope 2.12.
  [davisagli]

- Fixed a SyntaxError in test_configuration.
  [hannosch]


1.1.1 - April 18, 2008
----------------------

- Added proper unicode handling to mail action. This closes
  http://dev.plone.org/plone/ticket/7650.
  [hannosch]

- Made the GS import handlers more tolerant in case the storage utility
  is missing. This closes http://dev.plone.org/plone/ticket/8133.
  [hannosch]

- Changed wording on the IMailAction interface to remove a reference to a
  newly created item, since the action can be used on existing content
  as well. This closes http://dev.plone.org/plone/ticket/8225.
  [hannosch]


1.1 - April 20, 2008